# grouille

./: Cargo.toml  README  TODO
.vim/: settings.json
benches/: classifier.rs  stl_cut.rs
examples/: angles.rs  arabic_tiles.rs  classify.rs  clique.rs  hash.rs  hello.rs  holed_polygon.rs  offsetter.rs  overlap.rs  polygons.rs  slices.rs
src/: arc.rs  classifier.rs  elementary_path.rs  hashes.rs  holed_pocket.rs  holed_polygon.rs  intersections.rs  lib.rs  main.rs  overlap.rs  point.rs  quadrant.rs  segment.rs  shape.rs  slice.rs  tycat.rs  utils.rs
src/pocket/: mod.rs  pocket_builder.rs
src/polygon/: mod.rs  polygon_builder.rs
src/stl/: facet.rs  mod.rs
src/utils/: iterators.rs  mod.rs
test_files/: cordoba-large.stl  cordoba-very-large.stl  cordoba.stl
